<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_toast"
        android:onClick="showToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3DCE0C"
        android:text="@string/button_label_toast" />

    <TextView
        android:id="@+id/show_count"
        android:layout_below="@id/button_toast"
        android:layout_above="@id/button_browser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="#FFFF00"
        android:gravity="center"
        android:text="@string/count_initial_value"
        android:textSize="160sp" />

    <Button
        android:id="@+id/button_count"
        android:onClick="countUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@id/button_toast"
        android:backgroundTint="#3DCE0C"
        android:text="@string/button_label_count" />

    <Button
        android:id="@+id/button_switchpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_pindah"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@id/button_count"
        android:backgroundTint="#3DCE0C" />

    <Button
        android:id="@+id/button_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_label_browser"
        android:backgroundTint="#3DCE0C"/>

</RelativeLayout>